<resources>
    <string name="app_name">霸球体育</string>
    <string name="no_internet_connection_message">没有可用的网络，请检查您的 WiFi 或数据连接</string>
    <string name="no_internet_active_message">没有可用的互联网，请检查您连接的 WIFI 或数据</string>
    <string name="interactive_quiz">互动测验</string>
    <string name="only_quiz">100% 免费仅在 Quizzy</string>
    <string name="welcome_quiz">欢迎来到测验！</string>
    <string name="welcome_text">感谢您下载我们的应用程序！直接在您的手中享受所有 Quizzy 功能！</string>
    <string name="next">下一个</string>
    <string name="this_is_an_image" translatable="false">this is an image</string>
    <string name="points" >Points</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="play_game">Play Game</string>
    <string name="list_leaderboard">List Leaderboard</string>
    <string name="search">Search highest score</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulations">Congratulations!</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="back_to_home">Back to Home</string>
    <string name="question_number">Question number</string>
    <string name="you_got">You got</string>
    <string name="you_are_on"> points and you are on the good place on this quiz leaderboard, keep it up.</string>
    <string name="goal">Goal</string>
    <string name="top_score">Top score</string>
    <string name="height">Player Height</string>
    <string name="shirt_number">Shirt Number</string>
    <string name="league">League</string>
    <string name="team">Team</string>
    <string name="qp">QP</string>
    <string name="guess_the_player">Guess the player?</string>
    <string name="guess_the_team">Guess the team?</string>
    <string name="q">Q :</string>
    <string name="current_location">Current location</string>
    <string name="onboarding_header_1">Welcome to Quizzy!</string>
    <string name="onboarding_body_1">Thank you for downloading our app! Enjoy all of Quizzy features directly in your hands!</string>

    <string name="onboarding_header_2">Question Fooball</string>
    <string name="onboarding_body_2">Quizzy is trusted by the teachers worldwide to maintain the student learning progress</string>

    <string name="onboarding_header_3">Get Ready, be a Superstar!</string>
    <string name="onboarding_body_3">Gather all the poins as much as you can, be a superstar in your class with Quizzy!</string>
    <string name="app_pref_name">pa_ball_sports</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="wrong_answer">Wrong Answer!</string>
    <string name="play_again">Play Again</string>
    <string name="quit_game">Quit Game</string>

    <string name="ok">Ok</string>



</resources>