<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivity">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBaseline_toTopOf="parent"
    android:background="@drawable/ic_bg_blue_2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_55sdp"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/ic_logo_whit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/teams_cont"
                    android:background="?android:attr/selectableItemBackground"
                    >

                    <RelativeLayout
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:background="@drawable/circl_border"
                        android:layout_centerVertical="true"
                        >

                        <RelativeLayout
                            android:id="@+id/teams_radio"
                            android:layout_width="@dimen/_9sdp"
                            android:layout_height="@dimen/_9sdp"
                            android:visibility="gone"
                            android:background="@drawable/circl_bg_solid"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_minus4sdp"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/teams"/>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/players_cont"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:background="?android:attr/selectableItemBackground"
                    >

                    <RelativeLayout
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:background="@drawable/circl_border"
                        android:layout_centerVertical="true"
                        >

                        <RelativeLayout
                            android:id="@+id/players_radio"
                            android:layout_width="@dimen/_9sdp"
                            android:layout_height="@dimen/_9sdp"
                            android:visibility="gone"
                            android:background="@drawable/circl_bg_solid"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_minus4sdp"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/players"/>

                </RelativeLayout>




            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>